Day 8 and 9: Segment Search and Basin Mapping

--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -867,12 +867,512 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8abbd629",
+   "metadata": {},
+   "source": [
+    "# Day 8 - Digit Display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "ffa3c8dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "554\n",
+      "990964\n"
+     ]
+    }
+   ],
+   "source": [
+    "example = \"\"\"be cfbegad cbdgef fgaecd cgeb fdcge agebfd fecdb fabcd edb | fdgacbe cefdb cefbgd gcbe\n",
+    "edbfga begcd cbg gc gcadebf fbgde acbgfd abcde gfcbed gfec | fcgedb cgb dgebacf gc\n",
+    "fgaebd cg bdaec gdafb agbcfd gdcbef bgcad gfac gcb cdgabef | cg cg fdcagb cbg\n",
+    "fbegcd cbd adcefb dageb afcb bc aefdc ecdab fgdeca fcdbega | efabcd cedba gadfec cb\n",
+    "aecbfdg fbg gf bafeg dbefa fcge gcbea fcaegb dgceab fcbdga | gecf egdcabf bgf bfgea\n",
+    "fgeab ca afcebg bdacfeg cfaedg gcfdb baec bfadeg bafgc acf | gebdcfa ecba ca fadegcb\n",
+    "dbcfg fgd bdegcaf fgec aegbdf ecdfab fbedc dacgb gdcebf gf | cefg dcbef fcge gbcadfe\n",
+    "bdfegc cbegaf gecbf dfcage bdacg ed bedf ced adcbefg gebcd | ed bcgafe cdgba cbgef\n",
+    "egadfb cdbfeg cegd fecab cgb gbdefca cg fgcdab egfdb bfceg | gbdfcae bgc cg cgb\n",
+    "gcafb gcf dcaebfg ecagb gf abcdeg gaef cafbge fdbac fegbdc | fgae cfgab fg bagce\"\"\"\n",
+    "\n",
+    "with open('input_day8') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "inputs = [(s.split(\" | \")[0].split(), s.split(\" | \")[1].split()) for s in lines]\n",
+    "(t, f) = True, False\n",
+    "\n",
+    "digit_board =[[t, t, t, f, t, t, t],\n",
+    " [f, f, t, f, f, t, f],\n",
+    " [t, f, t, t, t, f, t],\n",
+    " [t, f, t, t, f, t, t],\n",
+    " [f, t, t, t, f, t, f],\n",
+    " [t, t, f, t, f, t, t],\n",
+    " [t, t, f, t, t, t, t],\n",
+    " [t, f, t, f, f, t, f],\n",
+    " [t, t, t, t, t, t, t],\n",
+    " [t, t, t, t, f, t, t]\n",
+    "]\n",
+    "\n",
+    "def charToIndex(c):\n",
+    "    return ord(c) - ord(\"a\")\n",
+    "\n",
+    "def rewire(digits, mapping):\n",
+    "    board = []\n",
+    "    for digit in digits:\n",
+    "        row = [f] * 7\n",
+    "        for c in digit:\n",
+    "            row[mapping[charToIndex(c)]] = True\n",
+    "        board += [row]\n",
+    "        \n",
+    "    if mapping == [1, 0, 2, 3, 4, 5 ,6]:\n",
+    "        print (board)\n",
+    "    return board\n",
+    "\n",
+    "def parseOutput(outputs, mapping):\n",
+    "    digits = []\n",
+    "    for output in outputs:\n",
+    "        row = [f] * 7\n",
+    "        for c in output:\n",
+    "            row[mapping[charToIndex(c)]] = True\n",
+    "        digits += [findRow(row)]\n",
+    "    return digits\n",
+    "            \n",
+    "    \n",
+    "def findRow(row):\n",
+    "    for (i, digit_row) in enumerate(digit_board):\n",
+    "        if (row == digit_row):\n",
+    "            return i\n",
+    "\n",
+    "def checkBoard(board):\n",
+    "    return all(row in digit_board for row in board)\n",
+    "\n",
+    "import itertools\n",
+    "def findMapping(digits):   \n",
+    "    i = 0\n",
+    "              #a. b. c.  d. e. f. g \n",
+    "    mapping = [0, 1 , 2, 3, 4, 5, 6]\n",
+    "    for m in itertools.permutations(mapping):\n",
+    "        if checkBoard(rewire(digits, m)):\n",
+    "            #print (f\"Found valid mapping {m}\")\n",
+    "            return m\n",
+    "\n",
+    "# findMapping([\"abcefg\", \"cf\", \"acdeg\", \"acdfg\", \"bcdf\", \"abdfg\", \"abdefg\", \"acf\", \"abcedfg\", \"abcdfg\"])\n",
+    "# findMapping([\"abcefg\", \"cf\", \"bcdeg\", \"bcdfg\", \"acdf\", \"abdfg\", \"abdefg\", \"bcf\", \"abcedfg\", \"abcdfg\"])\n",
+    "outputs = []\n",
+    "output_total = 0\n",
+    "for i in inputs:\n",
+    "    (digits, output) = i\n",
+    "    valid_mapping = findMapping(digits)\n",
+    "    output = parseOutput(output, valid_mapping)\n",
+    "    outputs += output\n",
+    "    output_total += int(\"\".join(str(x) for x in output))\n",
+    "\n",
+    "digit_counts = [0] * 10;\n",
+    "for o in outputs:\n",
+    "    digit_counts[o] += 1\n",
+    "# Part 1\n",
+    "print (digit_counts[1] + digit_counts[4] + digit_counts[7] + digit_counts[8])\n",
+    "# Part 2\n",
+    "print (output_total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68e084c8",
+   "metadata": {},
+   "source": [
+    "# Day 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "bec65b71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 1 Solution 478\n",
+      "Part 2 Solution 1327014\n"
+     ]
+    }
+   ],
+   "source": [
+    "#example = \"\"\"2199943210\n",
+    "#3987894921\n",
+    "#9856789892\n",
+    "#8767896789\n",
+    "#9899965678\"\"\"\n",
+    "\n",
+    "#heat_map = [[int(c) for c in line.strip()] for line in example.strip().split(\"\\n\")]\n",
+    "\n",
+    "with open('input_day9') as f:\n",
+    "   lines = f.readlines()\n",
+    "\n",
+    "heat_map = [[int(c) for c in line.strip()] for line in lines]\n",
+    "max_x = len(heat_map[0])\n",
+    "max_y = len(heat_map)\n",
+    "\n",
+    "adjacents = [(0, -1), (0, 1), (1, 0), (-1, 0)]\n",
+    "\n",
+    "def getPoint(x, y, m):\n",
+    "    if (x < 0 or y < 0 or x >= max_x or y >= max_y):\n",
+    "        return 9\n",
+    "    return m[y][x]\n",
+    "    \n",
+    "def isLowPoint(x, y, m):\n",
+    "    target = getPoint(x, y, m)\n",
+    "    return all(target < getPoint(x + i, y + j, m) for (i, j) in adjacents)\n",
+    "\n",
+    "def getLowestPoints(m):\n",
+    "    return [(x,y) for x in range(0, max_x) for y in range (0, max_y) if isLowPoint(x, y, heat_map)]\n",
+    "\n",
+    "def getDangerLevel(m, debug = False):\n",
+    "    low_points_score = 0\n",
+    "    for y in range(0, max_y):\n",
+    "        row = \"\"\n",
+    "        for x in range(0, max_x):\n",
+    "            p = str(getPoint(x, y, heat_map))\n",
+    "            if (isLowPoint(x, y, heat_map)):\n",
+    "                row += f\"\\x1b[3{p}m*\"\n",
+    "                low_points_score += (1 + int(p))\n",
+    "            else:\n",
+    "                row += f\"\\x1b[3{p}m{p}\"\n",
+    "        if (debug):\n",
+    "            print(row + \"\\x1b[39m\")\n",
+    "    return low_points_score\n",
+    "\n",
+    "\n",
+    "## Part 2: Map Basins - Flood Fill Style\n",
+    "import copy\n",
+    "import math\n",
+    "\n",
+    "def mapBasin(x, y, m):\n",
+    "    c_map = copy.deepcopy(m)\n",
+    "    return fillAdj(x, y, c_map)\n",
+    "       \n",
+    "def fillAdj(x, y, m):\n",
+    "    if getPoint(x, y, m) >= 9:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        m[y][x] = 9\n",
+    "        return 1 + sum(fillAdj(x + i, y + j, m) for (i,j) in adjacents)\n",
+    "\n",
+    "def getProdThreeLargestBasins(m):\n",
+    "    low_points = getLowestPoints(m)\n",
+    "    basin_sizes = [mapBasin(x, y, heat_map) for (x, y) in low_points]\n",
+    "    basin_sizes.sort()\n",
+    "    return math.prod(basin_sizes[len(basin_sizes) -3: len(basin_sizes)])\n",
+    "\n",
+    "        \n",
+    "print(f\"Part 1 Solution {getDangerLevel(heat_map)}\")\n",
+    "print(f\"Part 2 Solution {getProdThreeLargestBasins(heat_map)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "15f7bf44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "41c4c523",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(29, 0), (0, 26), (0, 64)]"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[missed for missed in expected_low if missed not in low_points]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "fef382c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "[6, 6, 8, 3]\n",
+      "[True, True, True, False]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getPoint(0, 64, heat_map)\n",
+    "def debugLowPoint(x, y, m):\n",
+    "    target = getPoint(x, y, m)\n",
+    "    print(target)\n",
+    "    print([getPoint(x + i, y + j, m) for (i, j) in adjacents])\n",
+    "    print([target < getPoint(x + i, y + j, m) for (i, j) in adjacents])\n",
+    "    return all(target < getPoint(x + i, y + j, m) for (i, j) in adjacents)\n",
+    "debugLowPoint(0, 64, heat_map)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f3483a",
+   "id": "936e7959",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d"
+   ]
   }
  ],
  "metadata": {
