Day 10: Syntax Fixing

--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8abbd629",
+   "id": "67d13335",
    "metadata": {},
    "source": [
     "# Day 8 - Digit Display"
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ffa3c8dc",
+   "id": "acf07f27",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e084c8",
+   "id": "3572e590",
    "metadata": {},
    "source": [
     "# Day 9"
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "bec65b71",
+   "id": "3d5b2c57",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
     "#heat_map = [[int(c) for c in line.strip()] for line in example.strip().split(\"\\n\")]\n",
     "\n",
     "with open('input_day9') as f:\n",
-    "   lines = f.readlines()\n",
+    "    lines = f.readlines()\n",
     "\n",
     "heat_map = [[int(c) for c in line.strip()] for line in lines]\n",
     "max_x = len(heat_map[0])\n",
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "15f7bf44",
+   "id": "46b2e253",
    "metadata": {},
    "outputs": [
     {
@@ -1307,72 +1307,107 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 163,
-   "id": "41c4c523",
+   "cell_type": "markdown",
+   "id": "51d07f0e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(29, 0), (0, 26), (0, 64)]"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "[missed for missed in expected_low if missed not in low_points]"
+    "# Day 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "fef382c7",
+   "execution_count": 294,
+   "id": "858775a6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "[6, 6, 8, 3]\n",
-      "[True, True, True, False]\n"
+      "Part 1: Syntax Failure : 323691\n",
+      "Part 2: Auto-complete Failure: 2858785164\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "getPoint(0, 64, heat_map)\n",
-    "def debugLowPoint(x, y, m):\n",
-    "    target = getPoint(x, y, m)\n",
-    "    print(target)\n",
-    "    print([getPoint(x + i, y + j, m) for (i, j) in adjacents])\n",
-    "    print([target < getPoint(x + i, y + j, m) for (i, j) in adjacents])\n",
-    "    return all(target < getPoint(x + i, y + j, m) for (i, j) in adjacents)\n",
-    "debugLowPoint(0, 64, heat_map)"
+    "#example = \"\"\"[({(<(())[]>[[{[]{<()<>>\n",
+    "#[(()[<>])]({[<{<<[]>>(\n",
+    "#{([(<{}[<>[]}>{[]{[(<()>\n",
+    "#(((({<>}<{<{<>}{[]{[]{}\n",
+    "#[[<[([]))<([[{}[[()]]]\n",
+    "#[{[{({}]{}}([{[{{{}}([]\n",
+    "#{<[[]]>}<{[{[{[]{()[[[]\n",
+    "#[<(<(<(<{}))><([]([]()\n",
+    "#<{([([[(<>()){}]>(<<{{\n",
+    "#<{([{{}}[<[[[<>{}]]]>[]]\n",
+    "#\"\"\"\n",
+    "#lines = example.split(\"\\n\")\n",
+    "\n",
+    "with open('input_day10') as f:\n",
+    "    lines = list(map(lambda x: x.strip(), f.readlines()))\n",
+    "\n",
+    "points = {\")\" : 3, \"]\" : 57, \"}\" : 1197, \">\" : 25137, None : 0}\n",
+    "ac_points = {\")\" : 1, \"]\" : 2, \"}\" : 3, \">\" : 4}\n",
+    "opening = \"[(<{\"\n",
+    "closing = \"])>}\"\n",
+    "\n",
+    "oc = {\"[\" : \"]\", \"(\" : \")\", \"<\" : \">\", \"{\" : \"}\"}\n",
+    "\n",
+    "\n",
+    "\n",
+    "def checkSyntax(line):\n",
+    "    stack = []\n",
+    "    for c in line:\n",
+    "        if (c in opening):\n",
+    "            stack.append(c)\n",
+    "        if (c in closing):\n",
+    "            expected = stack.pop()\n",
+    "            if (c != oc[expected]):\n",
+    "                return c\n",
+    "            \n",
+    "def completeLineScore(line):\n",
+    "    stack = []\n",
+    "    for c in line:\n",
+    "        if (c in opening):\n",
+    "            stack.append(c)\n",
+    "        if (c in closing):\n",
+    "            expected = stack.pop()\n",
+    "    stack.reverse()\n",
+    "    missing_characters = [oc[c] for c in stack]\n",
+    "    scores = [ac_points[c] for c in missing_characters]\n",
+    "    total_score = 0\n",
+    "    for score in scores:\n",
+    "        total_score *= 5 \n",
+    "        total_score += score\n",
+    "    return total_score\n",
+    "            \n",
+    "            \n",
+    "def syntaxPoints(lines):\n",
+    "    scores = [points[checkSyntax(line)] for line in lines]\n",
+    "    return sum(scores)\n",
+    "\n",
+    "def middle(values):\n",
+    "    values.sort()\n",
+    "    return values[len(values) // 2]\n",
+    "\n",
+    "def autoCompletePoints(lines):\n",
+    "    scores = [completeLineScore(line) for line in lines if checkSyntax(line) is None]\n",
+    "    return middle(scores)\n",
+    "\n",
+    "\n",
+    "# Part 1: Syntax Failures\n",
+    "print(f\"Part 1: Syntax Failure : {syntaxPoints(lines)}\")\n",
+    "# Part 2: Autocomplete Points\n",
+    "print(f\"Part 2: Auto-complete Failure: {autoCompletePoints(lines)}\")              "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "936e7959",
+   "id": "c927f7e6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "d"
-   ]
+   "source": []
   }
  ],
  "metadata": {
